# lambda-native-demo

./: .gitignore  README.md  deploy.sh
.github/workflows/: build-lambda-quarkus-native.yml  build-lambda-rust.yml
lambda-quarkus-native/: .gitignore  Makefile  README.md  docker-compose.localstack.yml  pom.xml  samconfig.toml  template.yaml
lambda-quarkus-native/events/: env-local.json  order-invalid.json  order-valid.json  route-unknown.json
lambda-quarkus-native/localstack-init/: create-queues.sh
lambda-quarkus-native/src/main/java/br/com/oeratech/ingress/: HttpResponses.java  IngressLambda.java  IngressService.java  RouteConfigService.java  SqsPublisher.java
lambda-quarkus-native/src/main/java/br/com/oeratech/ingress/dto/: RouteDTO.java  RouteTarget.java
lambda-quarkus-native/src/main/java/br/com/oeratech/ingress/exception/: BadRequestException.java  BrokerException.java  NotFoundException.java
lambda-quarkus-native/src/main/resources/: application.properties  routes.json
lambda-rust/: Cargo.toml  routes.json  samconfig.toml  template.yaml
lambda-rust/src/: handler.rs  main.rs  routes.rs  sqs.rs
test/: load-test.js  run.sh
