[package]
name = "lambda-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "0.13"
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-sqs = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.30", default-features = false }
async-trait = "0.1"

[dev-dependencies]
http = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
